[gd_scene load_steps=14 format=3 uid="uid://daen02rnfeed1"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_y6klu"]
[ext_resource type="VideoStream" path="res://assets/Title Screen/Title.ogv" id="2_t5k1q"]
[ext_resource type="Theme" uid="uid://cfxocfekwsruw" path="res://assets/Butons/new_theme.tres" id="2_wfxqr"]
[ext_resource type="FontFile" uid="uid://b7pjtcaddfkwk" path="res://assets/Fonts/PixelOperator8.ttf" id="3_qf6in"]
[ext_resource type="Texture2D" uid="uid://2h6c0g2r2x3b" path="res://assets/Title Screen/Default_Create_an_image_featuring_a_group_of_pixel_art_charact_2.jpg" id="3_tl4bk"]
[ext_resource type="Script" path="res://scripts/Start_Buton.gd" id="5_vvekp"]
[ext_resource type="AudioStream" uid="uid://be1ywdxwhe43y" path="res://assets/Songs/impact/03 - Impact.mp3" id="7_pgsuy"]
[ext_resource type="AudioStream" uid="uid://io854vm475m8" path="res://assets/Songs/Aviators - Fading Light (Instrumental) [Symphonic Rock] (256).mp3" id="8_2jrhp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5uw4t"]

[sub_resource type="Animation" id="Animation_c3kp8"]
resource_name = "Game Name"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xjx08"]
_data = {
"Game Name": SubResource("Animation_c3kp8")
}

[sub_resource type="Curve" id="Curve_4l3me"]
_data = [Vector2(0.129213, 0.89011), 0.0, 0.0, 0, 0, Vector2(0.910112, 0.307692), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_mnbuj"]
offsets = PackedFloat32Array(0, 0.0866667, 0.48, 0.8, 1)
colors = PackedColorArray(1, 0, 0, 0, 1, 0, 0, 1, 0.909062, 0.369245, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0)

[node name="Title screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y6klu")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.97353, 1)
stream = ExtResource("2_t5k1q")
autoplay = true
expand = true

[node name="Bg" type="TextureRect" parent="."]
z_index = -1
layout_mode = 2
offset_left = -30.0
offset_top = -25.0
offset_right = 1157.0
offset_bottom = 647.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tl4bk")
expand_mode = 2

[node name="Label" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -288.0
offset_top = 99.0
offset_right = -62.0
offset_bottom = 122.0
grow_horizontal = 2
scale = Vector2(3, 3)
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.0707571, 0.0263823, 0.0230824, 1)
theme_override_fonts/font = ExtResource("3_qf6in")
text = "Waves of Dreams"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -49.0
offset_right = 109.0
offset_bottom = 49.0
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Start_Buton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_wfxqr")
theme_override_fonts/font = ExtResource("3_qf6in")
text = "START"
script = ExtResource("5_vvekp")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_5uw4t")

[node name="Quit_Buton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wfxqr")
theme_override_fonts/font = ExtResource("3_qf6in")
text = "QUIT GAME"

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xjx08")
}

[node name="StartImpact" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-865, -200)
stream = ExtResource("7_pgsuy")
bus = &"SFX"

[node name="BackMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-865, -200)
stream = ExtResource("8_2jrhp")
pitch_scale = 0.89
autoplay = true
bus = &"BackMusic"

[node name="Swords" type="Sprite2D" parent="."]
position = Vector2(582, 117)
scale = Vector2(0.25, 0.25)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(576, 424)
amount = 24
lifetime = 4.0
randomness = 0.2
emission_shape = 1
emission_sphere_radius = 32.0
direction = Vector2(0, -1)
spread = 4.0
gravity = Vector2(0, 0)
initial_velocity_min = 12.0
initial_velocity_max = 18.0
scale_amount_min = 3.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_4l3me")
color_ramp = SubResource("Gradient_mnbuj")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Start_Buton" to="." method="_on_start_buton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quit_Buton" to="." method="_on_quit_buton_pressed"]
